<resources>
    <string name="app_name">EjerciciosHLC</string>
    <string name="ejercicios_de_clase_hlc">Ejercicios de clase HLC</string>
    <string name="thread_activity_runonuithread_runnable">THREAD: Activity.runOnUiThread(Runnable)</string>
    <string name="thread_view_post_runnable">THREAD: View.post(Runnable)</string>
    <string name="thread_view_postdelayed_runnable_long">THREAD: View.postDelayed(Runnable, long)</string>
    <string name="thread_android_os_handler">THREAD: android.os.Handler</string>
    <string name="ejemplo_service">Ejemplo Service</string>
    <string name="servicio_de_musica">Servicio de Musica</string>
</resources>
