<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zasha.ejercicioshlc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:padding="16dp"
            android:text="@string/ejercicios_de_clase_hlc"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@android:color/white"
            tools:ignore="NewApi" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thread_activity_runonuithread_runnable" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thread_view_post_runnable" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thread_android_os_handler" />

        <Button
            android:id="@+id/button_ejemplo_service"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="servicioSimple"
            android:text="@string/ejemplo_service" />

        <Button
            android:id="@+id/button_servicio_musica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sm"
            android:text="@string/servicio_de_musica" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
